...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <!-- Back Icon -->
            <ImageView
                android:id="@+id/done_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/back_icon"
                android:contentDescription="@string/back_to_cookbook"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />
...
                android:layout_toEndOf="@id/done_button"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <!-- Scale Icon -->
            <ImageView
                android:id="@+id/scale_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/scale_icon"
                android:contentDescription="@string/scale_recipe"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
...
                android:layout_toEndOf="@id/shopForButton"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <!-- Delete Icon -->
            <ImageView
                android:id="@+id/delete_recipe_ingredient"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_ingredients"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <!-- Edit Icon -->
            <ImageView
                android:id="@+id/edit_recipe_ingredient"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/edit_icon"
                android:contentDescription="@string/edit_ingredients"
                android:layout_toStartOf="@id/delete_recipe_ingredient"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />

            <!-- Add Icon -->
            <ImageView
                android:id="@+id/add_recipe_ingredient"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/upload_icon"
                android:contentDescription="@string/add_ingredients"
                android:layout_toStartOf="@id/edit_recipe_ingredient"
                android:layout_centerVertical="true"
...
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp" />

            <!-- Edit Icon -->
            <ImageView
                android:id="@+id/edit_instruction"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/edit_icon"
                android:contentDescription="@string/edit_instructions"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
...
