...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <!-- Back Icon -->
        <ImageView
            android:id="@+id/backToCookbookButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_icon"
            android:contentDescription="@string/back_to_cookbook"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />
...
